@@ -4055,10 +4055,6 @@ namespace trompeloeil
   mutable TROMPELOEIL_LINE_ID(expectation_list_t) TROMPELOEIL_LINE_ID(expectations)
 
 
-#define TROMPELOEIL_CXX11_AS_STRING_IMPL(x) #x
-#define TROMPELOEIL_CXX11_AS_STRING(x) TROMPELOEIL_CXX11_AS_STRING_IMPL(x)
-
-#define TROMPELOEIL_CXX14_AS_STRING(x) #x
 #define TROMPELOEIL_LPAREN (
 
 #define TROMPELOEIL_MORE_THAN_TWO_ARGS(...)                                    \
@@ -4554,9 +4550,6 @@ namespace trompeloeil
 #define MAKE_CONST_MOCK13         TROMPELOEIL_MAKE_CONST_MOCK13
 #define MAKE_CONST_MOCK14         TROMPELOEIL_MAKE_CONST_MOCK14
 #define MAKE_CONST_MOCK15         TROMPELOEIL_MAKE_CONST_MOCK15
-
-#define CXX11_AS_STRING           TROMPELOEIL_CXX11_AS_STRING
-#define CXX14_AS_STRING           TROMPELOEIL_CXX14_AS_STRING
 
 #define REQUIRE_CALL_V            TROMPELOEIL_REQUIRE_CALL_V
 #define NAMED_REQUIRE_CALL_V      TROMPELOEIL_NAMED_REQUIRE_CALL_V
